<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pattern">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Логотип -->
            <ImageView
                android:id="@+id/logo_howstart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"/>

            <!-- Как начать пользоваться программой -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/how_start_text"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <!-- Пункт первый -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:src="@drawable/number_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/number_one_text"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- Пункт второй -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:src="@drawable/number_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/number_two_text"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- Пункт третий -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:src="@drawable/number_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/number_three_text"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- Сообщение о задержке обновленных данных в 15 минут -->
            <TextView
                android:text="@string/warning1_text"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!-- Сообщение о возможных перебоях в работе радаров -->
            <TextView
                android:text="@string/warning3_text"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!-- Отказ от ответственности -->
            <TextView
                android:text="@string/warning2_text"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!-- Откуда же берутся эти данные ;) -->
            <TextView
                android:text="@string/from_text"
                android:autoLink="web"
                android:padding="5dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>